# yt-dl-loop

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/yt_download_loop/: cli.py
