[tool.poetry]
name = "yt-download-loop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yt_download_loop", from = "src"}]

[tool.poetry.dependencies]
# use latest yt-dlp
yt-dlp = "*"
python = "^3.11"
click = "^8.1.6"

[tool.poetry.scripts]
yt-dl-loop = "yt_download_loop.cli:cli_main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
