[project]
name = "yt-download-loop"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric L Frederich",email = "eric.frederich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "yt-dlp",
]

[project.scripts]
yt-dl-loop = "yt_download_loop.cli:cli_main"

[tool.poetry]
packages = [{include = "yt_download_loop", from = "src"}]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
